@@ -1,3 +1,4 @@
+240214 update docker file 
 240208 wandb_key update
 240127 re-implement the dnn parameterizer
 231229 re-implement the graph
